# slimgest

./: .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  pr-title-check.yml  rebase-needed.yml  scorecard.yml  stale.yml
src/gitingest/: __main__.py  entrypoint.py  ingestion.py  output_formatter.py
src/gitingest/schemas/: ingestion.py
src/gitingest/utils/: compat_func.py  compat_typing.py  git_utils.py  pattern_utils.py  timeout_wrapper.py
tests/: .pylintrc  conftest.py  test_cli.py  test_folder_truncation.py
tests/query_parser/: test_git_host_agnostic.py  test_query_parser.py
