[project]
name = "slimgest"
version = "0.4.0"
description="A fork of gitingest that intelligently collapses oversized folders so big repos fit in an LLM context window."
readme = {file = "README.md", content-type = "text/markdown" }
requires-python = ">= 3.10"
dependencies = [
    "click>=8.1.8",
    "gitpython>=3.1.43",
    "loguru>=0.7.3",
    "pathspec>=0.12.1",
    "pydantic>=2.7.4",
    "requests>=2.32.4",
    "strenum>=0.4.15; python_version < '3.11'",
    "tiktoken>=0.8.0",  # Support for o200k_base encoding
    "typing_extensions>=4.12.2; python_version < '3.11'",
]

license = {file = "LICENSE"}
authors = [
    { name = "Romain Courtois", email = "romain@coderamp.io" },
    { name = "Filip Christiansen"},
]
maintainers = [
    { name = "Proximile LLC" },
]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "eval-type-backport",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
]

[project.scripts]
gitingest = "gitingest.__main__:main"
slimgest = "gitingest.__main__:main"

[project.urls]
homepage = "https://github.com/proximile/slimgest"
repository = "https://github.com/proximile/slimgest"
upstream = "https://github.com/coderamp-labs/gitingest"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {where = ["src"]}}
include-package-data = true

# Linting configuration
[tool.pylint.format]
max-line-length = 119

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "too-few-public-methods",
    "broad-exception-caught",
    "duplicate-code",
    "fixme",
]

[tool.ruff]
line-length = 119
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [  # https://docs.astral.sh/ruff/rules/...
    "D107", # undocumented-public-init
    "FIX002", # line-contains-todo
    "TD002", # missing-todo-author
    "PLR0913", # too-many-arguments,

    # TODO: fix the following issues:
    "TD003", # missing-todo-link, TODO: add issue links
    "S108", # hardcoded-temp-file, TODO: replace with tempfile
    "BLE001", # blind-except, TODO: replace with specific exceptions
    "FAST003", # fast-api-unused-path-parameter, TODO: fix

    # Stylistic — runtime-imported stdlib types we use both at runtime and in
    # annotations; not worth the TYPE_CHECKING split.
    "TC003",
    "UP007", # `Union[X, Y]` is still readable and intentional here.
    "PTH115", # `os.readlink` is fine, retains compatibility with `os.fspath` callers.
]
per-file-ignores = { "tests/**/*.py" = [
    "S101",  # Skip "assert used" — pytest uses asserts.
    "D100", "D101", "D102", "D103", "D104",  # Missing docstrings — fine in tests.
    "PLR2004", # Magic-value comparisons are fine in test assertions.
    "TC003", # Stdlib imports at runtime — fine when tests use them at runtime too.
    "INP001",  # Tests don't need __init__ in every directory.
] }

[tool.ruff.lint.pylint]
max-returns = 10

[tool.ruff.lint.isort]
order-by-type = true
case-sensitive = true

[tool.pycln]
all = true

# TODO: Remove this once we figure out how to use ruff-isort
[tool.isort]
profile = "black"
line_length = 119
remove_redundant_aliases = true
float_to_top = true  # https://github.com/astral-sh/ruff/issues/6514
order_by_type = true
filter_files = true

# Test configuration
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests/"]
python_files = "test_*.py"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_classes = "Test*"
python_functions = "test_*"
